fix scrollbar X

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,8 @@ header {
 body {
   font-family: sans-serif;
   font-size: 16px;
+  padding: 0;
+  margin: 0;
 }
 
 /* Form */
